Add user secrets and EF Core setup in API project
Updated `GrooveNest.API.csproj` to include a `UserSecretsId` and added a reference to `Microsoft.EntityFrameworkCore.Design`. Added project references to other GrooveNest components.

In `Program.cs`, added using directives for `GrooveNest.Repository.Data` and `Microsoft.EntityFrameworkCore`. Configured `AppDbContext` to use SQL Server with a connection string from configuration while retaining existing service registrations for controllers and Swagger/OpenAPI.

--- a/GrooveNest.API/GrooveNest.API.csproj
+++ b/GrooveNest.API/GrooveNest.API.csproj
@@ -4,14 +4,26 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>77d01615-c8fd-481c-96d5-5de825447662</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GrooveNest.Domain\GrooveNest.Domain.csproj" />
+    <ProjectReference Include="..\GrooveNest.Repository\GrooveNest.Repository.csproj" />
+    <ProjectReference Include="..\GrooveNest.Service\GrooveNest.Service.csproj" />
+    <ProjectReference Include="..\GrooveNest.Utilities\GrooveNest.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
