--- a/GrooveNest.Service/GrooveNest.Service.csproj
+++ b/GrooveNest.Service/GrooveNest.Service.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GrooveNest.Domain\GrooveNest.Domain.csproj" />
+    <ProjectReference Include="..\GrooveNest.Repository\GrooveNest.Repository.csproj" />
+    <ProjectReference Include="..\GrooveNest.Utilities\GrooveNest.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
