Add user validation and retrieval methods
- Updated `GrooveNest.Domain.csproj` to reference `GrooveNest.Utilities`.
- Introduced `UserValidator` class in `UserValidator.cs` for validating user creation input.

--- a/GrooveNest.Domain/GrooveNest.Domain.csproj
+++ b/GrooveNest.Domain/GrooveNest.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GrooveNest.Utilities\GrooveNest.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
