Add BCrypt for password hashing in UserService
Updated `GrooveNest.Service.csproj` to include `BCrypt.Net-Next` version `4.0.3`.
Added a using directive for `BCrypt.Net.BCrypt` in `UserService.cs` and modified the user creation process to hash passwords before storage, enhancing security by avoiding plain text password storage.

--- a/GrooveNest.Service/GrooveNest.Service.csproj
+++ b/GrooveNest.Service/GrooveNest.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GrooveNest.Domain\GrooveNest.Domain.csproj" />
     <ProjectReference Include="..\GrooveNest.Repository\GrooveNest.Repository.csproj" />
     <ProjectReference Include="..\GrooveNest.Utilities\GrooveNest.Utilities.csproj" />
