--- a/GrooveNest.Utilities/GrooveNest.Utilities.csproj
+++ b/GrooveNest.Utilities/GrooveNest.Utilities.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
